@@ -1,13 +1,18 @@
 package Message::Passing::Role::HasErrorChain;
 use Moo::Role;
-use Message::Passing::Output::STDERR;
+use Module::Runtime qw/ require_module /;
 use namespace::clean -except => 'meta';
 
 has error => (
     is => 'ro',
     default => sub {
-        Message::Passing::Output::STDERR->new;
+        require_module 'Message::Passing::Output::STDERR';
+        require_module 'Message::Passing::Filter::Encoder::JSON';
+        Message::Passing::Filter::Encoder::JSON->new(
+            output_to => Message::Passing::Output::STDERR->new,
+        );
     },
+    lazy => 1,
 );
 
 1;
@@ -43,12 +48,39 @@ Some components can create an error stream in addition to a message stream.
 
 An attribute containing the error chain.
 
+By default, this is a chain of:
+
+=over
+
+=item Message::Passing::Filter::Encoder::JSON
+
+=item Message::Passing::Output::STDOUT
+
+=back
+
+=head1 WARNINGS
+
+=head2 ERROR CHAINS CAN LOOP
+
+If you override the error chain output, be sure that the error chain does not go into your
+normal log path! This is because if you suddenly have errors in your normal log path, and you
+then start logging these errors, this causes more errors - causing you to generate a message loop.
+
+=head2 ENCODING IN ERROR CHAINS
+
+If you emit something which cannot be encoded to an error chain then the encoding
+error will likely be emitted by the error chain - this can again cause loops and other
+issues.
+
+All components which use error chains should be very careful to output data which
+they are entirely certain will be able to be encoded.
+
 =head1 SPONSORSHIP
 
 This module exists due to the wonderful people at Suretec Systems Ltd.
 <http://www.suretecsystems.com/> who sponsored its development for its
 VoIP division called SureVoIP <http://www.surevoip.co.uk/> for use with
-the SureVoIP API - 
+the SureVoIP API -
 <http://www.surevoip.co.uk/support/wiki/api_documentation>
 
 =head1 AUTHOR, COPYRIGHT AND LICENSE
@@ -56,3 +88,4 @@ the SureVoIP API -
 See L<Message::Passing>.
 
 =cut
+
