@@ -1,3 +1,9 @@
+  - Add error chain support to the JSON encoder so that an error is
+    logged if JSON encoding fails.
+
+  - Make default error chain do JSON encoding on errors so that they're
+    readable.
+
 0.101
   - Fix daemonization features provided by Message::Passing::Role::Script
     to work on the command line again by exlicitly using MooX::Options
